# OpenGL_Loader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  GITHUB_PREPARATION.md  LICENSE  README - Copy.md  README.md  app_settings.json.template
Assets/: background.frag.glsl  background.vert.glsl  bounding_box.frag.glsl  bounding_box.vert.glsl  fragment.glsl  grid.frag.glsl  grid.vert.glsl  skeleton.frag.glsl  skeleton.vert.glsl  vertex.glsl
Dependencies/ImGuizmo/: README.md
Dependencies/imgui/: ImFileBrowser.h  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp
Dependencies/include/glad/: glad.h
MD/: ADJUST_VIEWPORT_LIMITS_GRID_SCALE.md  ANIMATION_SYSTEM_ARCHITECTURE.md  ANIMATION_TRANSPORT_CONTROLS.md  APPLICATION_CLASS_REFACTORING.md  APPLICATION_CORE_CLEANUP.md  APP_SETTINGS.md  ARROW_KEY_NAVIGATION.md  AUTO_FOCUS_FEATURE.md  AUTO_FOCUS_FLICKER_FIX.md  AUTO_FOCUS_ON_SELECTION.md  AUTO_FOCUS_PERSISTENCE.md  BONE_GIZMO_POSITIONING_FIX.md  BONE_PICKING_IMPLEMENTATION.md  BONE_ROTATION_PERSISTENCE.md  BOUNDING_BOX_BONE_OPTIMIZATION.md  BOUNDING_BOX_CHANGES.md  BOUNDING_BOX_IMPLEMENTATION.md  BOUNDING_BOX_PERFORMANCE.md  BOUNDING_BOX_STATE_DEPENDENCY_FIX.md  BOUNDING_BOX_TOGGLE_OPTIMIZATION.md  BUILD_FIX.md  BUILD_FIX_SUMMARY.md  CAMERA_AIM_CONSTRAINT.md  CAMERA_AIM_CONSTRAINT_2026-02-16_14-30.md  CAMERA_AIM_CONSTRAINT_FIX.md  CAMERA_AIM_ONE_SHOT.md  CAMERA_EULER_SYNC.md  CAMERA_FRAMING_MODEL_ISOLATION.md  CLEAN_CAMERA_FRAMING.md  CODEBASE_CLEANUP_V2.0.0.md  CODE_ORGANIZATION.md  CORNER_BASED_FRAMING.md  DEBUG_INFO_PANEL.md  DEBUG_PRINTS_ADDED.md  DEBUG_PRINT_GUIDELINES.md  DELETE_CHARACTER_FEATURE.md  DEPENDENCY_MANAGEMENT.md  DRAG_AND_DROP_FBX_SUPPORT.md  DYNAMIC_VIEWPORT_SYNC.md  FAR_CLIPPING_PLANE_CONTROL.md  (+99 more)
src/: application.cpp  application.h  glad.c  main.cpp  version.h  viewport_selection.cpp  viewport_selection.h
src/graphics/: bounding_box.cpp  bounding_box.h  defines.h  grid.cpp  grid.h  light.cpp  light.h  material.cpp  material.h  math3D.cpp  math3D.h  mesh.cpp  mesh.h  model.cpp  model.h  model_manager.cpp  model_manager.h  raycast.cpp  raycast.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h
src/graphics/models/: cube.hpp  lamp.hpp
src/io/: app_settings.cpp  app_settings.h  camera.cpp  camera.h  fbx_rig_analyzer.cpp  fbx_rig_analyzer.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  scene.cpp  scene.h
src/io/ui/: debug_panel.cpp  debug_panel.h  gizmo_manager.cpp  gizmo_manager.h  imgui_miniSliderV3.h  outliner.cpp  outliner.h  pch.h  property_panel.cpp  property_panel.h  timeSlider.cpp  timeSlider.h  ui_manager.cpp  ui_manager.h  viewport_panel.cpp  viewport_panel.h  viewport_settings_panel.cpp  viewport_settings_panel.h
src/utils/: logger.cpp  logger.h
